--- a/research/data_ingestion.ipynb
+++ b/research/data_ingestion.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gdown"
+    "import os"
    ]
   },
   {
@@ -15,26 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://drive.google.com/file/d/1E-mJbkLgqWfeOxs8dLFnsi_T3ubdFm3a/view?usp=sharing\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_id = url.split(\"/\")[-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
-    "gdown.download(prefix+file_id, \"Brain_MRI.zip\")"
+    "#Entity - is the return type of the function\n",
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "#Frozen ensures that no new functionality is added to the dataclass\n",
+    "#Dataclass could be used to create a class variable without using self\n",
+    "@dataclass(frozen=True)\n",
+    "class DataIngestionConfig:\n",
+    "    root_dir: Path\n",
+    "    source_URL: str\n",
+    "    local_data_file: Path\n",
+    "    unzip_dir: Path"
    ]
   },
   {
@@ -42,7 +35,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from src.MRI_Classifier.constants import *\n",
+    "from src.MRI_Classifier.utils.common import read_yaml, create_directories"
+   ]
   }
  ],
  "metadata": {
